@@ -1,9 +1,9 @@
-#	$NetBSD: Makefile,v 1.136 2003/07/04 05:41:49 tshiozak Exp $
+#	$NetBSD: Makefile,v 1.137 2004/03/13 22:28:47 jdolecek Exp $
 #	from: @(#)Makefile	8.3 (Berkeley) 1/7/94
 
 .include <bsd.own.mk>
 
-SUBDIR= apply apropos asa at audio banner basename biff \
+SUBDIR= apply apropos asa at audio awk banner basename biff \
 	bzip2 bzip2recover cal calendar cap_mkdb cdplay \
 	checknr chflags chpass cksum cmp col colcrt colrm \
 	column comm compress crontab crunch ctags cut \
